# thrift-fmt

./: .gitignore  README.md  pyproject.toml  simple.py
.github/workflows/: python-package.yml
fixtures/: README.md  ThriftTest.thrift  shared.thrift  simple.thrift  tutorial.thrift
tests/: fmt_test.py
tests/fixtures/: AnnotationTest.thrift  ThriftTest.thrift  namespace.thrift  simple.thrift  tutorial.thrift
thrift_fmt/: __init__.py  core.py  main.py
tutorial/: README.md  shared.thrift  tutorial.thrift
