[project]
name = "thrift-fmt"
version = "0.3.0a2"
description = "formart thrift file"
authors = [
    {name = "alingse", email = "alingse@foxmail.com"},
]
dependencies = [
    "click>=7.0",
    "thrift-parser>=1.0.7",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/alingse/thrift-fmt"

[project.scripts]
thrift-fmt = "thrift_fmt.main:main"

[tool]
[tool.pdm]
excludes = ["tests/"]

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.2",
]
dev = [
    "flake8>=4.0.1",
    "pytest>=7.1.2",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
